# swaydgets

./: Cargo.toml
scripts/: hello.lua
src/: calendar.rs  config.rs  dock.rs  main.rs  script.rs
